--- a/home.html
+++ b/home.html
@@ -1,11 +1,12 @@
 <html>
     <head>
          <title>
-    
+            Jk Barista
          </title>
     </head>
  
   <body>
-    
+    <H1 
+        aligh="centre"> Jk Barista </H1>
   </body>
 </html>
