--- a/home.html
+++ b/home.html
@@ -6,7 +6,7 @@
     </head>
  
   <body>
-    <H1 
-        aligh="centre"> Jk Barista </H1>
+    <H1> Jk Barista </H1>
+    <H2> Welcome every one</H2>
   </body>
 </html>
