--- a/home.html
+++ b/home.html
@@ -6,7 +6,11 @@
     </head>
  
   <body>
-    <H1> Jk Barista </H1>
-    <H2> Welcome every one</H2>
+    <H1><c>Jk Barista</c> </H1>
+    <H2><C>Welcome every one</C></H2>
+    <p>
+      Everyt thing is perfect when <br>
+      everythig perfectly alligned.
+    </p>
   </body>
 </html>
