--- a/home.html
+++ b/home.html
@@ -10,7 +10,8 @@
     <H2><C>Welcome every one</C></H2>
     <p>
       Everyt thing is perfect when <br>
-      everythig perfectly alligned.
+      everythig perfectly alligned.<br>
+    Better experience.
     </p>
   </body>
 </html>
