--- a/home.html
+++ b/home.html
@@ -11,7 +11,7 @@
     <p>
       Everyt thing is perfect when <br>
       everythig perfectly alligned.<br>
-    Better experience.
+    Better experience. like wise i did the same thing.
     </p>
   </body>
 </html>
