--- a/home.html
+++ b/home.html
@@ -11,7 +11,8 @@
     <p>
       Everyt thing is perfect when <br>
       everythig perfectly alligned.<br>
-    Better experience. like wise i did the same thing.
+       Better experience. like wise i did the same thing.<br>
+        sathuttai
     </p>
   </body>
 </html>
